# pyproject-cookiecutter

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  cookiecutter.json  pyproject.toml  test-config.yaml
.additional/: bitbucket_commit_prefix.py
hooks/: post_gen_project.py
sample-projects/poetry-project/: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
sample-projects/poetry-project-mypy-wemake-black/: .env.example  .flake8  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.project.txt
sample-projects/poetry-project-mypy-wemake-black/configs/: config_sample.yml
sample-projects/poetry-project-mypy-wemake-black/docker/: Dockerfile  README.md
sample-projects/poetry-project-mypy-wemake-black/docs/: TOOLS.md
sample-projects/poetry-project-mypy-wemake-black/notebooks/: example.ipynb
sample-projects/poetry-project-mypy-wemake-black/poetry_project_mypy_wemake_black/: __init__.py  settings.py
sample-projects/poetry-project-mypy-wemake-black/scripts/: config_sample.py
sample-projects/poetry-project-mypy-wemake-black/tests/test_example/: test_hello.py
sample-projects/poetry-project-ty-ruff/: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.project.txt
sample-projects/poetry-project-ty-ruff/configs/: config_sample.yml
sample-projects/poetry-project-ty-ruff/docker/: Dockerfile  README.md
sample-projects/poetry-project-ty-ruff/notebooks/: example.ipynb
sample-projects/poetry-project-ty-ruff/poetry_project_ty_ruff/: __init__.py  example.py  services.py  settings.py
sample-projects/poetry-project-ty-ruff/scripts/: config_sample.py
sample-projects/poetry-project-ty-ruff/tests/test_example/: test_hello.py
sample-projects/poetry-project/configs/: config_sample.yml
sample-projects/poetry-project/docker/: Dockerfile  README.md
sample-projects/poetry-project/notebooks/: example.ipynb
sample-projects/poetry-project/poetry_project/: __init__.py
sample-projects/poetry-project/scripts/: config_sample.py
sample-projects/poetry-project/tests/test_example/: test_hello.py
sample-projects/uv-project-ty-ruff-github/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.project.txt
sample-projects/uv-project-ty-ruff-github/configs/: config_sample.yml
sample-projects/uv-project-ty-ruff-github/docker/: Dockerfile  README.md
sample-projects/uv-project-ty-ruff-github/notebooks/: example.ipynb
sample-projects/uv-project-ty-ruff-github/scripts/: config_sample.py
sample-projects/uv-project-ty-ruff-github/tests/test_example/: test_hello.py
sample-projects/uv-project-ty-ruff-github/uv_project_ty_ruff_github/: __init__.py  paths.py
scripts/: generate_sample_projects.sh  test_project.sh  test_project_poetry.sh  test_project_uv.sh
test-configs/: pip-docker-github-mypy-39.yaml  poetry-docker-github-38.yaml  py310-poetry-docker-github-ruff.yaml  py310-poetry-docker-github.yaml  py310-poetry-mypy-docker-github-ruff.yaml  py310-poetry-mypy-docker-github.yaml  py311-poetry-docker-bitbucket.yaml  py311-poetry-docker-github.yaml  py311-uv-bitbucket-airflow.yaml  py311-uv-bitbucket-streamlit.yaml  py312-poetry-docker-github.yaml  (+4 more)
{{ cookiecutter.project_name }}/: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.general.toml  pyproject.poetry.toml  pyproject.toml  pyproject.uv.toml  requirements.project.txt
{{ cookiecutter.project_name }}/.additional/: bitbucket_commit_prefix.py  github_commit_prefix.py
{{ cookiecutter.project_name }}/airflow/: Dockerfile  docker-compose.yaml
{{ cookiecutter.project_name }}/airflow/dags/: dynamic_deferable_sample.py  expanded_dag_trigger_dag.py  pg_sample_create_data.py  simple_dag.py  simple_dag_sql_deferrable_snsr.py  simple_dag_timer_op.py
{{ cookiecutter.project_name }}/airflow/scripts/: create_connections.py
{{ cookiecutter.project_name }}/config/: config_sample.yml
{{ cookiecutter.project_name }}/configs/: config_sample.yml
{{ cookiecutter.project_name }}/docker/: Dockerfile  README.md
{{ cookiecutter.project_name }}/docs/: TOOLS.md
{{ cookiecutter.project_name }}/migrations/: env.py
{{ cookiecutter.project_name }}/notebooks/: example.ipynb
{{ cookiecutter.project_name }}/scripts/: config_sample.py
{{ cookiecutter.project_name }}/streamlit/: Dockerfile  app.py  config.py  docker-compose.debug.yml  docker-compose.yml
{{ cookiecutter.project_name }}/streamlit/pages/: add_user.py  show_users.py
{{ cookiecutter.project_name }}/tests/test_example/: conftest.py  test_hello.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py  __main__.py  example.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  example.py  paths.py  schemas.py  settings.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/airflow/: stubs.py  tasks.py  utils.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/airflow/sensors/: async_pg_sql_sensor.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/db/: models.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/db/sync/: engine.py  services.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/db/sync/dao/: base.py  dao.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/db/sync/repositories/: base.py  user.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/db/sync/services/: user.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/schemas/: user.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/settings/: notebook.py
(+68 files in other folders)
