# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-package-template"
version = "1.0.0"
description = "Cookiecutter template for Python cli/packages"
readme = "README.md"
authors = [
  "Aleksey Devyatkin <alexey4dev@gmail.com>",
]
license = "MIT"
repository = "https://github.com/KaiL4eK/pyproject-cookiecutter"
homepage = "https://github.com/KaiL4eK/pyproject-cookiecutter"
keywords = [
  "python",
  "cookiecutter",
  "template",
  "packages",
  "makefile",
  "best-practices",
  "poetry",
  "codestyle",
  "formatters",
  "python-packages",
  "semantic-versions",
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = ">=3.9,<4"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
