# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-project-mypy-wemake-black"
version = "0.1.0"
description = "Awesome `poetry-project-mypy-wemake-black` project!"
readme = "README.md"
authors = ["Awesome user <awesome-user@example.com>"]
repository = "https://github.com/Awesome-user/poetry-project-mypy-wemake-black/"
homepage = "https://github.com/Awesome-user/poetry-project-mypy-wemake-black/"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]





[tool.poetry.dependencies]
python = "~3.12.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
# In case of packages without patch part we just want to update them through minor versions
pre-commit = "^4.3.0"
pytest = "^8.4"
envyaml = "^1.10"
wemake-python-styleguide = "^1.3"
black = "^25.1"
isort = {extras = ["colors"], version = "^6.0"}
mypy = "^1.17"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
jupyter-client = "==6.1.12"
jupyter_contrib_nbextensions = "^0.5.1"
nbconvert = "5.6.1"
jinja2 = "3.0.3"
nbdime = "^4.0.2"



[tool.black]
# https://github.com/psf/black
target-version = ["py312"]
line-length = 100
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 312
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.12"
files = [
  "poetry_project_mypy_wemake_black"
]
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
